prufa að bæta við í github

--- a/index.html
+++ b/index.html
@@ -3,12 +3,124 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Vöruhúsið</title>
-
+    <title>Prílihúsið</title>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans|Oswald">
     <link rel="stylesheet" href="grid.css">
     <link rel="stylesheet" href="styles.css">
   </head>
+
   <body>
 
+    <header class="header__background">
+      <div class="header">
+        <div class="header__row">
+          <h1 class="header__row__title">Prílihúsið</h1>
+          <div class="header__row__links">
+            <div class="header__row__links__block header__pages">
+              <a href="index.html" class="current">FORSÍÐA</a>
+              <a href="pages/products.html">VÖRUR</a>
+              <a href="pages/course.html">NÁMSKEIÐ</a>
+              <a href="pages/staff.html">STARFSFÓLK</a>
+            </div>
+            <div class="header__row__links__block header__cart">
+                <a href="pages/cart.html"><img class="header__img" src="img/cart.svg" alt="Opna körfu"> Karfa (6) </a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </header>
+
+    <main>
+      <div class="index__main">
+        <div class="index__main__row">
+
+          <div class="index__main__row__column">
+            <div class="index__main__row__column__content content__reverse">
+              <div class="index__main__row__column__content__items item__desc" >
+                <h2 class="content__title">Allar vörurnar</h2>
+                <p class="">Prílihúsið hefur allar þær vörur sem þig vantar fyrir klifrið.</p>
+                <button class="content__button">
+                  Skoða vörur
+                </button>
+              </div>
+              <div class="index__main__row__column__content__items items__image">
+                <img class="" src="img/products.jpg" alt="Mynd af verslun">
+              </div>
+            </div>
+          </div>
+        
+
+          <div class="index__main__row__column">
+              <div class="index__main__row__column__content">
+                <div class="index__main__row__column__content__items item__desc" >
+                  <h2 class="content__title">Besta starfsfólkið</h2>
+                  <p class="">Starfsfólkið okkar hugsar vel um þig.</p>
+                  <button class="content__button">
+                    Kynnast starfsfólki
+                  </button>
+                </div>
+                <div class="index__main__row__column__content__items items__image">
+                  <img class="" src="img/team.jpg" alt="Mynd af höndum teymisins">
+                </div>
+              </div>
+            </div>
+
+        </div>
+      </div>
+    </main>
+
+    <footer class="footer__background">
+      <div class="footer">
+        <div class="footer__row">
+          <div class="footer__row__column">
+
+            <h3 class="footer__row__column__title">Vöruflokkar</h3>
+
+            <a href="">Nauðsynjavörur</a>
+            <a href="">Frábærar vörur</a>
+            <a href="">Ómissandi vörur</a>
+            <a href="">Ótrúlegar vörur</a>
+            <a href="">Magnaðar vörur</a>
+
+          </div>
+          <div class="footer__row__column" >
+
+            <h3 class="footer__row__column__title">Vöruflokkar</h3>
+
+            <a href="">Trylltar vörur</a>
+            <a href="">Geggjaðar vörur</a>
+            <a href="">Svakalegar vörur</a>
+            <a href="">Fáránlegar vörur</a>
+            <a href="">Klikkaðar vörur</a>
+
+          </div>
+          <div class="footer__row__column">
+
+            <h3 class="footer__row__column__title">Námskeið</h3>
+
+            <a href="">V0 - V1 námskeið</a>
+            <a href="">V2 - V4 námskeið</a>
+            <a href="">V5 - V7 námskeið</a>
+            <a href="">Fjallaklifur námskeið</a>
+
+          </div>
+          <div class="footer__row__column">
+
+            <h3 class="footer__row__column__title" >Síður</h3>
+
+            <a href="">Allar vörur</a>
+            <a href="">Starfsfólk</a>
+            <a href="">Námskeið</a>
+            <a href="">Karfa</a>
+          </div>
+        </div>
+
+        <div class="footer__copyright">
+          © 2019 Prílihúsið
+        </div>
+      </div>
+    </footer>
+    
   </body>
+
 </html>
