--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         <div class="header__row">
           <h1 class="header__row__title">Prílihúsið</h1>
           <div class="header__row__links">
+            <div class="header__row__links__block header__front"></div>
             <div class="header__row__links__block header__pages">
               <a href="index.html" class="current">FORSÍÐA</a>
               <a href="pages/products.html">VÖRUR</a>
@@ -32,34 +33,34 @@
 
     <main>
       <div class="index__main">
-        <div class="index__main__row">
+        <div class="index__row">
 
-          <div class="index__main__row__column">
-            <div class="index__main__row__column__content content__reverse">
-              <div class="index__main__row__column__content__items item__desc" >
+          <div class="index__row__column">
+            <div class="index__row__column__content content__reverse">
+              <div class="index__row__column__content__items item__desc" >
                 <h2 class="content__title">Allar vörurnar</h2>
                 <p class="">Prílihúsið hefur allar þær vörur sem þig vantar fyrir klifrið.</p>
                 <button class="content__button">
                   Skoða vörur
                 </button>
               </div>
-              <div class="index__main__row__column__content__items items__image">
+              <div class="index__row__column__content__items items__image">
                 <img class="" src="img/products.jpg" alt="Mynd af verslun">
               </div>
             </div>
           </div>
         
 
-          <div class="index__main__row__column">
-              <div class="index__main__row__column__content">
-                <div class="index__main__row__column__content__items item__desc" >
+          <div class="index__row__column">
+              <div class="index__row__column__content">
+                <div class="index__row__column__content__items item__desc" >
                   <h2 class="content__title">Besta starfsfólkið</h2>
                   <p class="">Starfsfólkið okkar hugsar vel um þig.</p>
                   <button class="content__button">
                     Kynnast starfsfólki
                   </button>
                 </div>
-                <div class="index__main__row__column__content__items items__image">
+                <div class="index__row__column__content__items items__image">
                   <img class="" src="img/team.jpg" alt="Mynd af höndum teymisins">
                 </div>
               </div>
