--- a/pages/staff.html
+++ b/pages/staff.html
@@ -15,6 +15,7 @@
                 <div class="header__row">
                     <h1 class="header__row__title">Prílihúsið</h1>
                     <div class="header__row__links">
+                        <div class="header__row__links__block header__front"></div>
                         <div class="header__row__links__block header__pages">
                           <a href="../index.html" >FORSÍÐA</a>
                           <a href="products.html">VÖRUR</a>
