--- a/pages/cart.html
+++ b/pages/cart.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html>
+<html lang="is">
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Prílihúsið</title>
-        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans|Oswald">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans">
         <link rel="stylesheet" href="../grid.css">
         <link rel="stylesheet" href="../styles.css">
     </head>
@@ -51,20 +51,20 @@
                         <div class="product__row__column__content__card__items">
                             <div class="product__cart">
                                 <label>Fjöldi:</label>
-                                <input class="product__cart__input" type="number" id="fjoldi" placeholder="2">
+                                <input class="product__cart__input" type="number" id="fjoldi1" placeholder="2">
                             </div>
 
                             <div class="product__row__column__content__card__items__button">
                                 <button class="product__button">
                                     <img class="cart__image" src="../img/cart.svg" alt="Mynd af kerru">
-                                    <p class="">Uppfæra</p>
+                                    Uppfæra
                                 </button>
                             </div>
 
                             <div class="product__row__column__content__card__items__button">
                                 <button class="product__button">
                                     <img class="cart__image" src="../img/cart.svg" alt="Mynd af kerru">
-                                    <p class="">Eyða úr körfu</p>
+                                    Eyða úr körfu
                                 </button>
                             </div>
                         </div>
@@ -81,7 +81,7 @@
                 <div class="product__row__column__content">
                     <div class="product__row__column__content__desc">
                         <h2 class="product__title">Kalkpoki</h2>
-                        <p class="">Kalkaðu hendurnar áður en þú verður kalkaður í hausnum.</p>
+                        <p class="cart__title">Kalkaðu hendurnar áður en þú verður kalkaður í hausnum.</p>
                     </div>
 
                     <div class="product__row__column__content__card">
@@ -90,20 +90,20 @@
                         <div class="product__row__column__content__card__items">
                             <div class="product__cart">
                                 <label>Fjöldi:</label>
-                                <input class="product__cart__input" type="number" id="fjoldi" placeholder="4">
+                                <input class="product__cart__input" type="number" id="fjoldi2" placeholder="4">
                             </div>
 
                             <div class="product__row__column__content__card__items__button">
                                 <button class="product__button">
                                     <img class="cart__image" src="../img/cart.svg" alt="Mynd af kerru">
-                                    <p class="">Uppfæra</p>
+                                    Uppfæra
                                 </button>
                             </div>
 
                             <div class="product__row__column__content__card__items__button">
                                 <button class="product__button">
                                     <img class="cart__image" src="../img/cart.svg" alt="Mynd af kerru">
-                                    <p class="">Eyða úr körfu</p>
+                                    Eyða úr körfu
                                 </button>
                             </div>
                         </div>
