--- a/pages/products.html
+++ b/pages/products.html
@@ -1,1 +1,11 @@
 <iframe width="1067" height="800" src="https://www.youtube.com/embed/hJI30M7ORsg" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+<p>Ég hafði ekki nægan tíma til að gera þessa síðu líka, en þetta er bara basically copy paste af vörunni í cart nema með nokkrum fínpússunum.</p>
+
+<h2>link á hinar síður aftur</h2>
+
+<a href="../index.html">FORSÍÐA</a>
+<a href="products.html">VÖRUR</a>
+<a href="course.html">NÁMSKEIÐ</a>
+<a href="staff.html">STARFSFÓLK</a>
+<a href="cart.html">KARFA</a>
