--- a/pages/staff.html
+++ b/pages/staff.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Prílihúsið</title>
-        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans|Oswald">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans">
         <link rel="stylesheet" href="../grid.css">
         <link rel="stylesheet" href="../styles.css">
     </head>
@@ -51,7 +51,7 @@
                     <div class="staff__row__column__card">
                         <div class="staff__row__column__card__content">
                             <div class="staff__row__column__card__content__image">
-                                <img class="staff__image" src="../img/Úlfur Arnar.jpg" alt="Karítas Hrafnsdóttir">
+                                <img class="staff__image" src="../img/Úlfur.jpg" alt="Úlfur Arnar Guðjohnsen">
                             </div>
                             <div class="staff__row__column__card__content__front card__back">
                                 <h2 class="">Úlfur Arnar Guðjohnsen</h2>
@@ -65,7 +65,7 @@
                     <div class="staff__row__column__card">
                         <div class="staff__row__column__card__content">
                             <div class="staff__row__column__card__content__image">
-                                <img class="staff__image" src="../img/Bergrós.jpg" alt="Karítas Hrafnsdóttir">
+                                <img class="staff__image" src="../img/Bergrós.jpg" alt="Bergrós Pétursdóttir">
                             </div>
                             <div class="staff__row__column__card__content__front card__back">
                                 <h2 class="">Bergrós Pétursdóttir</h2>
@@ -79,7 +79,7 @@
                     <div class="staff__row__column__card">
                         <div class="staff__row__column__card__content">
                             <div class="staff__row__column__card__content__image">
-                                <img class="staff__image" src="../img/Hannes.jpg" alt="Karítas Hrafnsdóttir">
+                                <img class="staff__image" src="../img/Hannes.jpg" alt="Hannes Flóki Andrason">
                             </div>
                             <div class="staff__row__column__card__content__front card__back">
                                 <h2 class="">Hannes Flóki Andrason</h2>
